<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_root">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_invested_amount"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:textColor="@color/GREY_666666"
            android:fontFamily="@font/din_pro_light"
            android:layout_height="wrap_content"
            android:text="@string/simulation_form_invested_amount_label"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_invested_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_invested_amount"
            app:layout_constraintStart_toStartOf="@id/tv_invested_amount"
            app:layout_constraintEnd_toEndOf="@id/tv_invested_amount"
            android:hint="@string/simulation_form_placeholder_invested_amount"
            android:textSize="30sp"
            android:fontFamily="@font/din_pro_light"
            android:importantForAutofill="no"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_maturity_date"
            app:layout_constraintTop_toBottomOf="@+id/et_invested_amount"
            app:layout_constraintStart_toStartOf="@+id/et_invested_amount"
            app:layout_constraintEnd_toEndOf="@+id/et_invested_amount"
            android:layout_marginTop="40dp"
            android:layout_width="0dp"
            android:fontFamily="@font/din_pro_light"
            android:textColor="@color/GREY_666666"
            android:layout_height="wrap_content"
            android:text="@string/simulation_form_maturity_date_label"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_maturity_date"
            app:layout_constraintTop_toBottomOf="@id/tv_maturity_date"
            app:layout_constraintStart_toStartOf="@id/tv_maturity_date"
            app:layout_constraintEnd_toEndOf="@id/tv_maturity_date"
            android:hint="@string/simulation_form_placeholder_maturity_date"
            android:textSize="30sp"
            android:importantForAutofill="no"
            android:gravity="center"
            android:layout_width="0dp"
            android:fontFamily="@font/din_pro_light"
            android:layout_height="wrap_content"
            android:inputType="date" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/et_maturity_date"
            app:layout_constraintStart_toStartOf="@+id/et_maturity_date"
            app:layout_constraintEnd_toEndOf="@+id/et_maturity_date"
            android:layout_width="0dp"
            android:textColor="@color/GREY_666666"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_pro_light"
            android:text="@string/simulation_form_rate_label"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_rate"
            app:layout_constraintTop_toBottomOf="@id/tv_rate"
            app:layout_constraintStart_toStartOf="@id/tv_rate"
            app:layout_constraintEnd_toEndOf="@id/tv_rate"
            android:hint="@string/simulation_form_placeholder_rate"
            android:textSize="30sp"
            android:fontFamily="@font/din_pro_light"
            android:importantForAutofill="no"
            android:gravity="center"
            android:maxLength="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_to_simulate"
            android:enabled="false"
            style="@style/ButtonDefault"
            android:fontFamily="@font/din_pro_light"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/et_rate"
            app:layout_constraintStart_toStartOf="@id/et_rate"
            app:layout_constraintEnd_toEndOf="@id/et_rate"
            android:text="@string/simulation_form_btn_to_simulate"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>